--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
     <title>QuoteBook</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="box">
-  
-        <div class="box-in">
-          <p class="text">"Są dwie drogi, aby przeżyć życie. Jedna to żyć tak, jakby nic nie było cudem. Druga to żyć tak, jakby cudem było wszystko."</p>
-          <p class="author">Albert Einstein</p>
-        </div>
-        <div class="line"></div>
+      <div class="box-in">
+        <p class="text">
+          "Są dwie drogi, aby przeżyć życie. Jedna to żyć tak, jakby nic nie
+          było cudem. Druga to żyć tak, jakby cudem było wszystko."
+        </p>
+        <p class="author">Albert Einstein</p>
       </div>
-      <button class="next-page">Kolejna Strona</button>
-
-      
-</body>
-
-<script src="app.js"></script>
+      <div class="line"></div>
+    </div>
+    <button class="next-page">Kolejna Strona</button>
+  </body>
 </html>
